==> psu-epl/EPL-RFID/src/esp32/spi/main/rc522.c <==
#include "rc522.h"

char PcdRequest(uint8_t req_code,uint8_t *pTagType)
{
    char   status;
    uint8_t   unLen;
    uint8_t   ucComMF522Buf[MAXRLEN];
    
    /*
     * B7       1 = start transmission of data (with transceive command)
     * B6 - B4  0 = LSB stored in position 0
     * B3       not used
     * B2 - B0  number of bits of last byte that will be transmitted
     */

    WriteRawRC(BitFramingReg,0x07);

    ucComMF522Buf[0] = req_code;

    /* write request with length 1, receive in buf and unlen = #bits received*/
    status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,1,ucComMF522Buf,&unLen,1);

	/* expect 2 bytes or 16 bits with card type*/
    if ((status == TAG_OK) && (unLen == 0x10))
    {
        *pTagType     = ucComMF522Buf[0];
        *(pTagType+1) = ucComMF522Buf[1];
    }
    else if (status == TAG_COLLISION) 
            status = TAG_COLLISION;
    
    else if (status != TAG_NOTAG) status = TAG_ERR;

    return status;
}

char PcdAnticoll(uint8_t cascade, uint8_t *pSnr)
{
    char   status;
    uint8_t   i,snr_check=0;
    uint8_t   unLen;
    uint8_t   ucComMF522Buf[MAXRLEN];
    uint8_t   pass=32;      // max 32 bits (ISo standard)
    uint8_t   collbits=0;

    i=0;
  
    /* 
     * LSB of the received bit is stored at bit position 0, the second on stored on ps 1
     * all bits of the last byte will be transferred */
    WriteRawRC(BitFramingReg,0x00);

	// bits received after collision are cleared
	WriteRawRC(CollReg,0x80);
	
    do {
        /* anti collision commands 0x93, 0x95 or 0x97 */
        ucComMF522Buf[0] = cascade;

        /* NVB = number of valid bits/bytes
         * 
         * NVB : 0x20 = no part of UID is sent = anticollision command
         * 
         * 0x20 => top 4 bits is byte count = 2 valid bytes to transmit: cascade (or SEL or CL) + NVB
         * byte count 2 = minimum, 7 max
         * 
         * 0x20 => bottom 4 bits is bit count = 0 : number of valid data bits (include SEL+NVB) modulo 8
         *     
         * normal way to connect at first, second the UID will be asked
         * with collbits set to the correct number of UID bits
         */
        ucComMF522Buf[1] = 0x20+collbits;

        //  WriteRawRC(0x0e,0);

        /* write Transceive command to card*/
        status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,2+i,ucComMF522Buf,&unLen,1);
        ESP_LOGE(READER13, "status1 %x ",status);

        if (status == TAG_COLLISION) {

            collbits=ReadRawRC(CollReg)&0x1f;

            /* 00 = bit collision of 32nd bit
             * that sets the length of the UID */
            if (collbits==0) collbits=32;

            i=(collbits-1)/8 +1;

            ucComMF522Buf[i-1]|=(1<<((collbits-1)%8));  // move collbit to right place
            ucComMF522Buf[5]=ucComMF522Buf[3];
            ucComMF522Buf[4]=ucComMF522Buf[2];
            ucComMF522Buf[3]=ucComMF522Buf[1];
            ucComMF522Buf[2]=ucComMF522Buf[0];

            WriteRawRC(BitFramingReg,(collbits % 8));
        }
    } while ( --pass > 0 && status == TAG_COLLISION);


    if (status == TAG_OK)   // 4 bytes as defined by ISO
    {
        ESP_LOGE(READER13, "here %x ",status);
        for (i=0; i < 4; i++)
        {
            *(pSnr+i)  = ucComMF522Buf[i];
            ESP_LOGE(READER13, "ID %x ",ucComMF522Buf[i]);

            snr_check ^= ucComMF522Buf[i];
        }
		// check BCC = block check characters match
        if (snr_check != ucComMF522Buf[i]) status = TAG_ERR;    
    }

    return status;
}

char PcdReset(void)
{
    // perform a softreset
    WriteRawRC(CommandReg,PCD_RESETPHASE);      
    

    
    // wait for Soft power-down to finish
    while (ReadRawRC(CommandReg) & 0x10);
    
    // Turn antenna off
    PcdAntennaOff();
        
	/* setup internal timer (used in PcdComMF522 for timeout)
	 * 
	 * This TPrescaler is set to 0xa9 => 169 => 40 khz => 25us
	 * The reload value is 0x3e8 = 1000, as such :  25 ms
	 */

    /* timer mode 
     * B7    = 1  Timer start automatically at end of transmission
     * B6/B5 = 00 Non-gated mode (no dependency on MFIN or AUX1 pin)
     * B4    = 0  No automatic restart (comIRQReg TimeIRQ bit is set at 0)
     * B3-B0 = 0x0 Higher 4 bits of Tprescaler divider
     */
    WriteRawRC(TModeReg,0x80);

    /* B7 -B0 = Tprescaler LSB 7 bits of divider */
    WriteRawRC(TPrescalerReg,0xA9); // + TmodeReg[3...0]

    /* time reload value, lower 8 bits */
    WriteRawRC(TReloadRegL,0xE8);

    /* timer reload value, higher 8 bits */
    WriteRawRC(TReloadRegH,0x03);

    /* forces a 100% ASK modulation independent of modGsPReg  (Type-A)
     * ASK = Amplitude Shift Keying */
    WriteRawRC(TxASKReg,0x40); 

    /* Preset value
     * B7     0  CRC does not start with MSB first
     * B6     0  Not used
     * B5     1  transmitter can only be started if RF field is generated
     * B4     0  not used
     * B3     1  Polarity on MFIN is active high
     * B2     1  not used
     * B1 B0  01 CRC preset value 6363 (TYPE-A)*/
    WriteRawRC(ModeReg,0x2D);        //CRC initialize value 

    // Turn antenna on
    PcdAntennaOn();
    
    return(TAG_OK);
}

uint8_t ReadRawRC(uint8_t Address)
{
    esp_err_t ret;
    spi_transaction_t t;
    uint8_t buffer;
    memset(&t, 0, sizeof(t));     //Zero out the transaction
    t.addr = (0x80 | (Address << 1)); //MSB == 1 is for reading from Datasheet section 8.1.2.3.
    t.length = 8;
    t.rx_buffer = (void *)&buffer;
    ret = spi_device_transmit(spi_handle, &t); //Transmit!
    assert(ret == ESP_OK);              //Should have had no issues.
    /*
    We need the second transmit because
    on the transmit we don't get anything from RC522
    this is defined section 8.1.2.1
  */
    ret = spi_device_transmit(spi_handle, &t); //Transmit!
    assert(ret == ESP_OK);              //Should have had no issues.
    return buffer;
}

uint8_t WriteRawRC(uint8_t Address, uint8_t value)
{
    /*
Note:
When reading and writing using ESP-IDF we can 
either use the .addr or set it 0 and include the address
in the data being sent.
*/
    esp_err_t ret;
    spi_transaction_t t;
    memset(&t, 0, sizeof(t)); //Zero out the transaction
    t.addr = Address << 1;        //MSB == 0 is for writing from Datasheet section 8.1.2.3.
    t.tx_buffer = (void *)&value;
    t.length = 8;                       //This is the length of the tx_buffer in bits
    ret = spi_device_transmit(spi_handle, &t); //Transmit!
    assert(ret == ESP_OK);              //Should have had no issues.

    // return error register
    return(ReadRawRC(ErrorReg));
    
}

char PcdComMF522(uint8_t   Command,
		uint8_t *pIn ,				// buffer to sent
		uint8_t   InLenByte,		// num bytes to sent
		uint8_t *pOut ,				// buffer to receive
		uint8_t *pOutLenBit	,		// num bits stored in receive buffer
		int		CheckTimeout)		// check timeout =1 
{
	
    char   status = TAG_ERR;		// return code
    uint8_t   irqEn   = 0x00;		// IRQ register content
    uint8_t   waitFor = 0x00;		
    uint8_t   lastBits;
    uint8_t   n;
    uint32_t   i;
    uint8_t PcdErr;

    switch (Command)
    {
    case PCD_AUTHENT:
        irqEn   = 0x12; // enable Idle and low alert interrupts
        waitFor = 0x10;	// expect interrupt to continue (idle interrupt)
        break;
    case PCD_TRANSCEIVE:
        irqEn   = 0x77; // enable all alert except high alert interrupt
        waitFor = 0x30; // expect interrupt to continue (Idle and received end of valid data stream)
        break;
    default:
        break;			
    }
    /*
     * B7   1 IRQ inverted with respect to Status1reg IRq bit
     * B6   1 allows transmitter interrupt request
     * B5   1 Allow receiver interrupt request
     * B4   1 allow idle interrupt request
     * B3   1 allow high alert interrupt request
     * B2   1 allows low alert interrupt request
     * B1   1 allow error interrupt request
     * B0   1 allows time interrupt request
     */
    WriteRawRC(ComIEnReg,irqEn|0x80);

    /* clear IRQ inverted respect to status1reg 
     * indicates that the marked bits in the ComIrqReg register are set */
    ClearBitMask(ComIrqReg,0x80);

    /* Flushbuffer / clear FIFO*/
    SetBitMask(FIFOLevelReg,0x80);

    /* sent command to set RC522 to Idle & cancel any pending execution */
    WriteRawRC(CommandReg,PCD_IDLE);

    /* write data in FIFO data for the length of buffer*/
    for (i=0; i<InLenByte; i++)  WriteRawRC(FIFODataReg, pIn [i]);

    /* sent the command */
    WriteRawRC(CommandReg, Command);

    /* start the transmission of data in Transceive mode*/
    if (Command == PCD_TRANSCEIVE) SetBitMask(BitFramingReg,0x80);

    i = 150;

    /* as long as not count down
     * Time out has not happened
     * and other possible wait for interrupts
     * n&01 = time out has happened (timeout was set in PcdReset as 24ms)
     * n&waitfor = good interrupts to happen
     */

    do
    {
        /* read interrupt register */
        n = ReadRawRC(ComIrqReg);
        i--;
    }
    while (i!=0 && (! (n&0x01)) && (!(n&waitFor)));

    /* removing start data transmission in transceive */
    if (Command == PCD_TRANSCEIVE) ClearBitMask(BitFramingReg,0x80);
    
    /* maybe something received as no count-down */
    if (i != 0)
    {
        PcdErr=ReadRawRC(ErrorReg);

        /* check for parity or buffer overflow/protocol err */
        if (!(PcdErr & 0x11))
        {
            status = TAG_OK;
            
            /* time out had triggered  (~24 ms) */
            if (n & irqEn & 0x01)
            {
				/* necessary to discard during data transmission with increment, decrement,
				 * transfer these commands time out as there is NAK responds
				 * to be expected. */
				if (CheckTimeout)  status = TAG_NOTAG;
			}
            else if (Command == PCD_TRANSCEIVE) 
            {
                /* get # of bytes received in FIFO */
                n = ReadRawRC(FIFOLevelReg);

                /* get # valid bits in the last byte 00 = all*/
                lastBits = ReadRawRC(ControlReg) & 0x07;

                /* determine the correct amount of bits */
                if (lastBits) *pOutLenBit = (n-1)*8 + lastBits;
                else *pOutLenBit = n*8;

                /* set counter start and maximum good */
                if (n == 0) n = 1;
                if (n > MAXRLEN) n = MAXRLEN;

                /* read the receive information */
                for (i=0; i < n; i++) {
                    pOut [i] = ReadRawRC(FIFODataReg);
                }
        
            }
        }
        else 
            status = TAG_ERR;

        /* collision error detected ?*/
        if (PcdErr & 0x08) 
        {
            status = TAG_COLLISION;
        }
    }
   
    SetBitMask(ControlReg,0x80);           // stop timer now
    return status;
}
